@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4840] Change: Drop workspace and localization fields from oelib
 - [#5032] Cleanup: Move Geocoding/ to Classes/Geocoding/
 - [#5031] Cleanup: Move Exception/ to Classes/Exception/
 - [#5029] Cleanup: Move the TCA to Configuration/TCA/
